k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: choustoulakis-website-svc
spec:
  selector:
    deployment: choustoulakis-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
