k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: choustoulakis-website-ing
  tls:
    - hosts:
        - choustoulakis.de
        - www.choustoulakis.de
      secretName: choustoulakis-website-tls
spec:
  rules:
    - host: choustoulakis.de
      http: &http
        paths:
          - backend:
              service:
                name: choustoulakis-website-svc
                port:
                  number: 80
            path: /(.*)
            pathType: Prefix
          - backend:
              service:
                name: choustoulakis-cms-svc
                port:
                  number: 9000
            path: /api/(.*)
            pathType: Prefix
    - host: www.choustoulakis.de
      http: *http
